--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
-<script src="/index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
