not implemented yet message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Simulation of 8 radio transmitters sending separate sources and N radios receiving them.</h2>
     <button id="start">playSound</button>
     <p>Move the listening position with the arrow keys.</p>
-    <button id="auto">automate Listen Position</button>
+    <button id="auto">automate Listen Position [not implemented yet]</button>
    
     <!-- <p><style>canvas { background: white; }</style></p> -->
 
