added loading message

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h2>Simulation of 8 radio transmitters sending separate sources and N radios receiving them.</h2>
     <button id="start">playSound</button>
+    <span id="loading"></span>
     <p>Move the listening position with the arrow keys.</p>
     <button id="auto">automate Listen Position [not implemented yet]</button>
    
