began to improve file-switching incl adding chs

--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     <span id="loading"></span>
     <p>Move the listening position with the arrow keys.</p>
     <button id="auto">automate Listen Position [not implemented yet]</button>
+    <div><button id="playnumbers">play NUMBERS</button>
+        <button id="playu2">re-play U2</button></div>
+    <div><label for="loadfiles">Load audio files: [not implemented yet]</label> 
+        <select name="loadfiles" id="loadfiles"> 
+            <option value="u2">U2 (pre-loaded)</option> 
+            <option value="numberFiles">Numbers</option> 
+            <option value="vincent">Soundscapes (by Vincent Isabel)</option> 
+            <option value="outfoxing">Outfoxing</option> 
+        </select></div>
+    <div><label for="playfiles">Play: [not implemented yet]</label> 
+        <select name="playfiles" id="playfiles"> 
+            <option  value="u2">U2 (pre-loaded)</option> 
+            <option hidden value="numberFiles">Numbers</option> 
+            <option hidden value="vincent">Soundscapes (by Vincent Isabel)</option> 
+            <option hidden value="outfoxing">Outfoxing</option> 
+        </select></div>
+    
    
     <!-- <p><style>canvas { background: white; }</style></p> -->
 
